# learnOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/learngl/: camera.h  filesystem.h  shader_m.h
src/1.0hello_window/: main.cpp
src/10.0.lighting_maps_diffuse_map/: 10.0.lighting_maps.fs  lighting_maps_diffuse.cpp
src/10.1.lighting_maps_specular_map/: lighting_maps_specular_map.cpp
src/11.0.lighting_casters_directional/: 11.0.lighting_maps.fs  lighting_maps_specular_map.cpp
src/2.1hello_triangle_index/: hello_triangle_index.cpp
src/2.2hello_triangle_exercise1/: hello_triangle_exercise1.cpp
src/2.3hello_triangle_exercise2/: hello_triangle_exercise2.cpp
src/2.4.hello_triangle_exercise3/: hello_triangle_exercise3.cpp
src/3.2.shaders_interpolation/: shaders_interpolation.cpp
src/3.3.shader_class/: 3.3shader.fs
src/3.3shader_class/: shader.vs  shader_class.cpp
src/4.0.textures/: textures.cpp
src/4.1.textures_combined/: 4.1.texture.fs
src/4.1textures_combined/: textures_combined.cpp
src/4.2.textures_exercise2/: textures_exercise2.cpp
src/4.3.textures_exercise3/: textures_exercise3.cpp
src/4.4.textures_exercise4/: 4.4.texture.fs  textures_exercise4.cpp
src/4.textures/: 4.texture.fs  shader_t.h  textures.cpp
src/5.0.transformations/: transformations.cpp
src/5.1.transformations_exercise2/: transformations_exercise2.cpp
src/6.0.coordinate_systems/: 6.0.coordinate_systems.cpp
src/6.0coordinate_systems/: 6.0.coordinate_systems.cpp  6.0.coordinate_systems.vs
src/6.1.coordinate_systems_depth/: coordinate_systems_depth.cpp
src/6.2.coordinate_systems_multiple/: coordinate_systems_multiple.cpp
src/7.0.camera_circle/: camera_circle.cpp
src/7.1.camera_keyboard_dt/: camera_keyboard_dt.cpp
src/7.2.camera_mouse_zoom/: camera_mouse_zoom.cpp
src/7.3.camera_class/: camera_class.cpp
src/8.0.lighting_color/: 8.0.lamp.vs  lighting_color.cpp
src/8.1.basic_lighting/: basic_lighting_diffuse.cpp
src/9.0.materials/: materials.cpp
src/hello_triangle/: hello_triangle.cpp
src/hello_window/: main.cpp
src/shaders/: shader.vs  shader_class.cpp  shaders.cpp  shaders_uniform.cpp
src/textures/: texture.fs  textures.cpp
